# peopledatalabs-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: publish.yaml  rust-clippy.yml  rust.yml  test.yml
examples/autocompete/: main.rs
examples/company/: main.rs
examples/ip/: main.rs
examples/job_posting/: main.rs
examples/job_title/: main.rs
examples/location/: main.rs
examples/person/: main.rs
examples/school/: main.rs
examples/skill/: main.rs
src/: client.rs  lib.rs
src/api/: autocomplete.rs  changelog.rs  company.rs  ip.rs  jobposting.rs  jobtitle.rs  location.rs  mod.rs  person.rs  school.rs  skills.rs
src/models/: autocomplete.rs  changelog.rs  common.rs  company.rs  ip.rs  jobposting.rs  jobtitle.rs  location.rs  mod.rs  person.rs  school.rs  skills.rs
