[package]
name = "peopledatalabs"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.27", features = ["client", "http1"] }
hyper-tls = "0.5.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serde_qs = "0.12"
