[package]
name = "peopledatalabs"
version = "0.1.2"
edition = "2021"
description = "A Rust client for the People Data Labs API"
documentation = "https://docs.peopledatalabs.com/docs/rust-sdk"
readme = "README.md"
homepage = "https://www.peopledatalabs.com"
repository = "https://github.com/peopledatalabs/peopledatalabs-rust"
license = "MIT"
keywords = ["peopledatalabs", "person-data", "company-data", "sdk", "api"]
categories = ["api-bindings"]

[dependencies]
hyper = { version = "0.14.27", features = ["client", "http1"] }
hyper-tls = "0.5.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serde_qs = "0.12"
