[package]
name = "peopledatalabs"
version = "1.1.1"
edition = "2021"
description = "A Rust client for the People Data Labs API"
documentation = "https://docs.peopledatalabs.com/docs/rust-sdk"
readme = "README.md"
homepage = "https://www.peopledatalabs.com"
repository = "https://github.com/peopledatalabs/peopledatalabs-rust"
license = "MIT"
keywords = ["peopledatalabs", "person-data", "company-data", "sdk", "api"]
categories = ["api-bindings"]

[dependencies]
hyper = { version = "1.0.1", features = ["client", "http1"] }
hyper-tls = "0.6.0"
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serde_urlencoded = "0.7.1"
